--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "keywords": [
         "imgur",
         "reddit",
+        "instagram",
         "downloader",
         "media"
     ],
@@ -17,7 +18,9 @@
     "license": "MIT",
     "devDependencies": {
         "axios": "^1.7.3",
+        "cheerio": "1.0.0-rc.12",
         "jest": "^29.7.0",
-        "prettier": "^3.3.3"
+        "prettier": "^3.3.3",
+        "qs": "^6.13.0"
     }
 }
