--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -4,6 +4,7 @@ on:
     workflow_dispatch:
     push:
         branches: [master]
+    pull_request:
     schedule:
         - cron: '0 11 * * 5' # Ejecutar cada viernes a las 11:00 UTC
 
