--- a/package.json
+++ b/package.json
@@ -4,24 +4,37 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "jest",
-        "prettier": "prettier --write ."
+        "clean": "shx rm -rf node_modules && shx rm pnpm-lock.yaml",
+        "lint": "eslint **/*.js",
+        "prettier": "prettier --write .",
+        "test": "jest"
     },
     "keywords": [
         "imgur",
         "reddit",
         "instagram",
         "facebook",
+        "twitter",
+        "pinterest",
+        "tiktok",
         "downloader",
         "media"
     ],
     "author": "David Duran <contacto@altmails.com>",
     "license": "MIT",
     "devDependencies": {
+        "@changesets/cli": "^2.27.7",
+        "@eslint/js": "^9.8.0",
         "axios": "^1.7.3",
         "cheerio": "1.0.0-rc.12",
+        "eslint": "^9.8.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-jest": "^28.6.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "globals": "^15.9.0",
         "jest": "^29.7.0",
         "prettier": "^3.3.3",
-        "qs": "^6.13.0"
+        "qs": "^6.13.0",
+        "shx": "^0.3.4"
     }
 }
