--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
             - uses: actions/checkout@v4
             - uses: pnpm/action-setup@v4
               with:
-                  version: 7
+                  version: 9
             - uses: actions/setup-node@v4
               with:
                   node-version: 20.x
@@ -32,5 +32,5 @@ jobs:
               with:
                   publish: pnpm run release
               env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
