--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@totallynodavid/downloader",
-    "version": "2.0.0",
+    "version": "2.0.1",
     "description": "A Node.js package to retrieve direct media URLs from popular social platforms.",
     "main": "index.js",
     "scripts": {
@@ -22,11 +22,14 @@
     ],
     "author": "David Duran <contacto@altmails.com>",
     "license": "MIT",
+    "dependencies": {
+        "axios": "^1.7.3",
+        "cheerio": "1.0.0-rc.12",
+        "qs": "^6.13.0"
+    },
     "devDependencies": {
         "@changesets/cli": "^2.27.7",
         "@eslint/js": "^9.8.0",
-        "axios": "^1.7.3",
-        "cheerio": "1.0.0-rc.12",
         "eslint": "^9.8.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-jest": "^28.6.0",
@@ -34,7 +37,6 @@
         "globals": "^15.9.0",
         "jest": "^29.7.0",
         "prettier": "^3.3.3",
-        "qs": "^6.13.0",
         "shx": "^0.3.4"
     }
 }
