--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "author": "David Duran <contacto@altmails.com>",
     "license": "MIT",
     "dependencies": {
-        "axios": "^1.7.3",
-        "cheerio": "1.0.0-rc.12",
+        "axios": "^1.7.4",
+        "cheerio": "1.0.0",
         "qs": "^6.13.0"
     },
     "devDependencies": {
         "@changesets/cli": "^2.27.7",
-        "@eslint/js": "^9.8.0",
-        "eslint": "^9.8.0",
+        "@eslint/js": "^9.9.0",
+        "eslint": "^9.9.0",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-jest": "^28.6.0",
+        "eslint-plugin-jest": "^28.8.0",
         "eslint-plugin-prettier": "^5.2.1",
         "globals": "^15.9.0",
         "jest": "^29.7.0",
