--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
     "main": "index.js",
     "scripts": {
         "clean": "shx rm -rf node_modules && shx rm pnpm-lock.yaml",
-        "lint": "eslint **/*.js",
-        "prettier": "prettier --write .",
-        "test": "jest"
+        "lint": "eslint --fix --color .",
+        "prettier": "prettier --write ."
     },
     "keywords": [
         "imgur",
@@ -30,13 +29,15 @@
     "devDependencies": {
         "@changesets/cli": "^2.27.7",
         "@eslint/js": "^9.9.0",
+        "@typescript-eslint/eslint-plugin": "^8.2.0",
+        "@typescript-eslint/parser": "^8.2.0",
         "eslint": "^9.9.0",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-jest": "^28.8.0",
         "eslint-plugin-prettier": "^5.2.1",
         "globals": "^15.9.0",
-        "jest": "^29.7.0",
         "prettier": "^3.3.3",
-        "shx": "^0.3.4"
+        "shx": "^0.3.4",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.5.4"
     }
 }
