--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,10 @@
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
         "declaration": true,
-        "moduleResolution": "node"
+        "moduleResolution": "node",
+        "paths": {
+            "@/*": ["./src/*"]
+        }
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules"]
