build: add files to ignore when deploying to npm registry

--- a/.npmignore
+++ b/.npmignore
@@ -1,11 +1,12 @@
 .github
 .changeset
 node_modules
+dist
 
-hosts/imgur.test.js
 .gitignore
 .prettierignore
 eslint.config.js
 prettier.config.js
 pnpm-lock.yaml
 CHANGELOG.md
+tsconfig.js
