fix: added interface for ApiResponse & dev script

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
         "resolveJsonModule": true,
         "declaration": true,
         "moduleResolution": "node",
+        "removeComments": true,
         "paths": {
             "@/*": ["./src/*"]
         }
