--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "build": "tsc",
-        "dev": "ts-node -r tsconfig-paths/register src/test.ts",
+        "dev": "ts-node -r tsconfig-paths/register src/dev.ts",
         "clean": "shx rm -rf dist node_modules pnpm-lock.yaml",
         "lint": "eslint --fix --color src/**/*.ts",
         "prettier": "prettier --write src/**/*.ts"
