--- a/package.json
+++ b/package.json
@@ -24,9 +24,14 @@
     "author": "David Duran <contacto@altmails.com>",
     "license": "MIT",
     "dependencies": {
+        "@types/debug": "^4.1.12",
         "axios": "^1.7.7",
         "cheerio": "1.0.0",
-        "qs": "^6.13.0"
+        "debug": "^4.3.7",
+        "http-proxy-agent": "^7.0.2",
+        "p-limit": "^4.0.0",
+        "qs": "^6.13.0",
+        "winston": "^3.15.0"
     },
     "devDependencies": {
         "@changesets/cli": "^2.27.9",
