--- a/package.json
+++ b/package.json
@@ -1,18 +1,7 @@
 {
-  "name": "@totallynodavid/downloader",
+  "name": "@totallynotdavid/downloader",
   "version": "2.0.1",
-  "description": "Node.js package to fetch/download media & metadata from social platforms. Streamline your backend!",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "build": "pnpm run lint && pnpm run prettier && tsc",
-    "dev": "ts-node -r tsconfig-paths/register src/dev.ts",
-    "clean": "shx rm -rf dist",
-    "lint": "eslint --fix --color src/**/*.ts",
-    "prettier": "prettier --write src/**/*.ts",
-    "prepublishOnly": "pnpm run clean && pnpm run build && npm pack --dry-run",
-    "prepare": "husky"
-  },
+  "description": "Get direct download URLs from YouTube, Instagram, TikTok, X, and more.",
   "keywords": [
     "imgur",
     "reddit",
@@ -21,11 +10,10 @@
     "twitter",
     "pinterest",
     "tiktok",
-    "downloader",
-    "media"
+    "downloader"
   ],
-  "author": "David Duran <contacto@altmails.com>",
   "license": "MIT",
+  "author": "David Duran <dadch1404@gmail.com>",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/totallynotdavid/downloader.git"
@@ -34,47 +22,32 @@
     "url": "https://github.com/totallynotdavid/downloader/issues"
   },
   "homepage": "https://github.com/totallynotdavid/downloader#readme",
+  "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist",
     "README.md",
     "LICENSE"
   ],
+  "scripts": {
+    "clean": "shx rm -rf dist",
+    "biome:check": "biome check src",
+    "biome:format": "biome format src --write",
+    "build": "bun run biome:check && bun run biome:format && tsc -p tsconfig.json",
+    "dev": "bun src/dev.ts",
+    "prepublishOnly": "bun run clean && bun run build"
+  },
   "dependencies": {
     "axios": "^1.7.7",
-    "cheerio": "1.0.0",
+    "cheerio": "1.1.2",
     "p-limit": "^3.1.0",
     "qs": "^6.13.0",
     "winston": "^3.15.0"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.27.9",
-    "@eslint/js": "^9.9.0",
-    "@types/cheerio": "^0.22.35",
-    "@types/node": "^22.7.5",
+    "@types/bun": "^1.3.3",
     "@types/qs": "^6.9.15",
-    "@typescript-eslint/eslint-plugin": "^8.8.1",
-    "@typescript-eslint/parser": "^8.8.1",
-    "eslint": "^9.9.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "globals": "^15.9.0",
-    "husky": "^9.1.6",
-    "lint-staged": "^15.2.10",
-    "prettier": "^3.3.3",
-    "shx": "^0.3.4",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.5.4"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.ts": [
-      "eslint --fix",
-      "prettier --write"
-    ]
+    "shx": "^0.4.0"
   }
 }
