--- a/package.json
+++ b/package.json
@@ -39,14 +39,10 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "cheerio": "1.1.2",
-    "p-limit": "^3.1.0",
-    "qs": "^6.13.0",
-    "winston": "^3.15.0"
+    "cheerio": "1.1.2"
   },
   "devDependencies": {
     "@types/bun": "^1.3.3",
-    "@types/qs": "^6.9.15",
     "shx": "^0.4.0"
   }
 }
