--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
   publish:
     if:
       ${{ github.event.workflow_run.conclusion == 'success' &&
-      startsWith(github.event.workflow_run.head_ref, 'refs/tags/') }}
+      startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
