--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "scripts": {
     "clean": "shx rm -rf dist",
     "format": "biome format --write . && biome check --write . && bun x prettier \"**/*.{md,yml}\" --write --print-width=80 --prose-wrap=always",
-    "build": "bun run format && bun build src/index.ts --outdir ./dist --target node --minify --external axios --external cheerio",
+    "build": "bun run format && bun x bunup",
     "test": "bun test",
     "prepublishOnly": "bun run clean && bun run build"
   },
