--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,10 +13,18 @@ permissions:
 
 jobs:
   publish:
+    runs-on: ubuntu-latest
     if:
       ${{ github.event.workflow_run.conclusion == 'success' &&
       startsWith(github.ref, 'refs/tags/') }}
-    runs-on: ubuntu-latest
+
+    environment:
+      name: publishing
+
+    permissions:
+      id-token: write
+      contents: read
+
     steps:
       - uses: actions/checkout@v6
 
@@ -24,7 +32,9 @@ jobs:
         with:
           bun-version: "1.3.3"
 
-      - run: bun install --frozen-lockfile
+      - uses: biomejs/setup-biome@7df4f9db1ab569c7d77181fa2ba490e8da9d298d # v2.6.0
+        with:
+          version: "2.3.8"
 
       - uses: actions/setup-node@v6
         with:
@@ -39,8 +49,13 @@ jobs:
   github:
     needs: publish
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+
     steps:
       - uses: actions/checkout@v6
+
       - uses: softprops/action-gh-release@a06a81a03ee405af7f2048a818ed3f03bbf83c7b # v2.5.0
         with:
           generate_release_notes: true
