--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "LICENSE"
   ],
   "scripts": {
-    "clean": "shx rm -rf dist",
+    "clean": "bun x shx rm -rf dist",
     "format": "biome format --write . && biome check --write . && bun x prettier \"**/*.{md,yml}\" --write --print-width=80 --prose-wrap=always",
     "build": "bun run format && bun x bunup",
     "test": "bun test",
